--- a/index.html
+++ b/index.html
@@ -11,20 +11,31 @@
 </head>
 <body class="bg-light">
     <header>
-        <div class="container-fluid text-center bg-danger text-white fs-5 py-3 fw-bold">
-            Compra mínima en la Web: S/. 200.00
+        <div class="container-fluid text-center background-rojo text-white fs-5 py-3 fw-bold">
+            Compra mínima en la Web: S/. 300.00
         </div>
-        <div class="container-fluid text-center bg-secondary text-white fs-6 py-3 fw-bold">
-            Dirección: --------------- | Email: --------------- | Teléfono: ---------------
+        <div class="banner">
+            <div class="banner-window">
+                <div class="banner-track">
+                    <!-- Contenido duplicado para el bucle-->
+                    <div class="banner-item">📧 pedidos@mayoristaprecioscuiados.com.ar</div>
+                    <div class="banner-item">☎ Teléfono: 3424440263</div>
+                    <div class="banner-item">📍 Direcciones: Casa Central: Av. Blas Parera 96</div>
+
+                    <div class="banner-item">📧 pedidos@mayoristaprecioscuiados.com.ar</div>
+                    <div class="banner-item">☎ Teléfono: 3424440263</div>
+                    <div class="banner-item">📍 Direcciones: Casa Central: Av. Blas Parera 96</div>
+                </div>
+            </div>
         </div>
 
         <div class="container">
             <div class="row mb-3 mx-5">
-                <div class="col-md-2 text-end">
-                    <img style="height: 140px; width: auto;" src="https://cdn.worldvectorlogo.com/logos/triches-distribuidora.svg" alt="Logo de la empresa">
+                <div class="col-md-2 text-end mt-3">
+                    <img style="height: 90px; width: auto;" src="img/index/logo empresa.png" alt="Logo de la empresa">
                 </div>
                 
-                <div class="col-md-5" style="display: flex; align-self: center; flex-direction: row">
+                <div class="col-md-5 mt-3" style="display: flex; align-self: center; flex-direction: row">
 
                     <input type="text" placeholder="¿Qué estás buscando?"  style="width:100%;border: 1px solid #E21318; border-radius: 5px; border-bottom-right-radius: 0px; border-top-right-radius: 0px; height: 40px; padding: 10px">
                     <div class="text-center" style="background: #E21318; width: 40px; height: 40px; border-radius: 5px; border-bottom-left-radius: 0px; border-top-left-radius: 0px; cursor: pointer">
@@ -33,13 +44,13 @@
 
                 </div>
                 
-                <div class="col-md-5" style="display: flex; flex-direction: row; align-self: center; justify-content: flex-end">
+                <div class="col-md-5 mt-3" style="display: flex; flex-direction: row; align-self: center; justify-content: flex-end">
 
                     <div class="text-center" style=" width: 33%; height: 50px;margin-right:5px">
                         <button class="btn btn-outline-dark"  style="width:100%;height:50px" type="button">CARRITO <i class="bi bi-cart2" style="height: 16px; margin-left: 10px;"></i></button>
                     </div>
                     <div class="text-center" style=" width: 33%; height: 50px;margin-right:5px">
-                        <button type="button" class="btn btn-outline-danger" style="width:100%;height:50px">INGRESAR</button>
+                        <button type="button" class="btn btn-outline-danger backgroundHover-rojo" style="width:100%;height:50px">INGRESAR</button>
                     </div>
                 </div>                
             </div>
@@ -56,7 +67,7 @@
                         <li class="nav-item me-3 ms-5">
                             <!-- menú desplegable de productos -->
                             <div class="dropdown">
-                                <button class="btn btn-danger fw-bold dropdown-toggle" style="width:100%;height:45px" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="btn btn-danger background-rojo fw-bold dropdown-toggle" style="width:100%;height:45px" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 PRODUCTOS
                                 </button>
                                 <ul class="dropdown-menu">
@@ -260,19 +271,19 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="nav-item mx-2">
+                        <li class="nav-item mx-3">
                         <a class="nav-link active fw-bold" aria-current="page" href="#">HOME</a>
                         </li>
-                        <li class="nav-item mx-2">
+                        <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="#">¿QUIÉNES SOMOS?</a>
                         </li>
-                        <li class="nav-item mx-2">
+                        <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="#">SUCURSALES</a>
                         </li>
-                        <li class="nav-item mx-2">
+                        <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="#">PREGUNTAS FRECUENTES</a>
                         </li>
-                        <li class="nav-item mx-2">
+                        <li class="nav-item mx-3">
                         <a class="nav-link fw-bold" href="#">CAMBIO Y DEVOLUCIÓN</a>
                         </li>
                         <li class="nav-item ms-3">
@@ -296,19 +307,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img style="height: 70vh;" src="https://img.freepik.com/vector-gratis/fondo-viernes-negro-plano_23-2149118300.jpg?semt=ais_hybrid&w=740&q=80" class="d-block w-100" alt="Imagen carrusel 1">
+                <img style="height: 73vh;" src="img/index/carrusel-img1.png" class="d-block w-100" alt="Imagen carrusel 1">
             </div>
             <div class="carousel-item">
-                <img style="height: 70vh;" src="https://img.freepik.com/vector-gratis/fondo-viernes-negro-plano_23-2149118300.jpg?semt=ais_hybrid&w=740&q=80" class="d-block w-100" alt="Imagen carrusel 2">
+                <img style="height: 73vh;" src="img/index/carrusel-img2.png" class="d-block w-100" alt="Imagen carrusel 2">
             </div>
             <div class="carousel-item">
-                <img style="height: 70vh;" src="https://img.freepik.com/vector-gratis/fondo-viernes-negro-geometrico-plano_23-2149118290.jpg?semt=ais_hybrid&w=740" class="d-block w-100" alt="Imagen carrusel 3">
+                <img style="height: 73vh;" src="img/index/carrusel-img3.png" class="d-block w-100" alt="Imagen carrusel 3">
             </div>
             <div class="carousel-item">
-                <img style="height: 70vh;" src="https://gestion.pe/resizer/td9ippoFOM763XyhGAN2dTzlmhk=/400x0/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/47VWVW46SNHVXPHQ7B2O7QWJDI.jpg" class="d-block w-100" alt="Imagen carrusel 3">
+                <img style="height: 73vh;" src="img/index/carrusel-img2.png" class="d-block w-100" alt="Imagen carrusel 3">
             </div>
             <div class="carousel-item">
-                <img style="height: 70vh;" src="https://img.freepik.com/vector-gratis/fondo-realista-viernes-negro-3d_52683-74661.jpg?semt=ais_hybrid&w=740&q=80" class="d-block w-100" alt="Imagen carrusel 3">
+                <img style="height: 73vh;" src="img/index/carrusel-img1.png" class="d-block w-100" alt="Imagen carrusel 3">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -324,7 +335,7 @@
     <!-- Sección ofertas del mes -->
     <div class="container my-5">
         <div class="row">
-            <div class="col-auto py-2 mt-4 fs-2 bg-danger text-white">
+            <div class="col-auto py-2 mt-4 fs-2 background-rojo text-white">
                 <p><span class="fw-bold">OFERTAS</span> DEL MES</p>
             </div>
         </div>
@@ -338,14 +349,14 @@
                     <small class="text-muted">*No aplica descuentos vigentes.</small>
                     <h6 class="mt-2 fw-bold text-danger fs-5">MODER-4007/00</h6>
                     <p class="fs-5">Olla Arrocera Electrolux</p>
-                    <div class="product-price">S/.3,899</div>
-                    <div class="product-old-price">S/.4,515</div>
+                    <div class="product-price">S/.99.00</div>
+                    <div class="product-old-price">S/.120.00</div>
                     <div class="qty-controls">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, -1)">-</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, -1)">-</button>
                         <input type="number" class="form-control mx-1" value="1" min="1">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, 1)">+</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, 1)">+</button>
                     </div>
-                    <button class="btn btn-outline-danger w-100">Agregar al Carrito</button>
+                    <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
                 </div>
             </div>
 
@@ -357,14 +368,14 @@
                     <small class="text-muted">*No aplica descuentos vigentes.</small>
                     <h6 class="mt-2 fw-bold text-danger fs-5">LAB-117-26003</h6>
                     <p class="fs-5">cacerola antiadherente</p>
-                    <div class="product-price">S/.5,600</div>
-                    <div class="product-old-price">S/.6,529</div>
+                    <div class="product-price">S/.79.99</div>
+                    <div class="product-old-price">S/.89.99</div>
                     <div class="qty-controls">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, -1)">-</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, -1)">-</button>
                         <input type="number" class="form-control mx-1" value="1" min="1">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, 1)">+</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, 1)">+</button>
                     </div>
-                    <button class="btn btn-outline-danger w-100">Agregar al Carrito</button>
+                    <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
                 </div>
             </div>
 
@@ -376,14 +387,14 @@
                     <small class="text-muted">*No aplica descuentos vigentes.</small>
                     <h6 class="mt-2 fw-bold text-danger fs-5">CL-6280</h6>
                     <p class="fs-5">Olla de Acero N°28</p>
-                    <div class="product-price">S/.1,550</div>
-                    <div class="product-old-price">S/.1,827</div>
+                    <div class="product-price">S/.125.00</div>
+                    <div class="product-old-price">S/.150.00</div>
                     <div class="qty-controls">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, -1)">-</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, -1)">-</button>
                         <input type="number" class="form-control mx-1" value="1" min="1">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, 1)">+</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, 1)">+</button>
                     </div>
-                    <button class="btn btn-outline-danger w-100">Agregar al Carrito</button>
+                    <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
                 </div>
             </div>
 
@@ -395,14 +406,14 @@
                     <small class="text-muted">*No aplica descuentos vigentes.</small>
                     <h6 class="mt-2 fw-bold text-danger fs-5">CL-7582</h6>
                     <p class="fs-5">Cacerola Enlozada 24cm</p>
-                    <div class="product-price">S/.1,550</div>
-                    <div class="product-old-price">S/.1,827</div>
+                    <div class="product-price">S/.199.99</div>
+                    <div class="product-old-price">S/.220.00</div>
                     <div class="qty-controls">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, -1)">-</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, -1)">-</button>
                         <input type="number" class="form-control mx-1" value="1" min="1">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, 1)">+</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, 1)">+</button>
                     </div>
-                    <button class="btn btn-outline-danger w-100">Agregar al Carrito</button>
+                    <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
                 </div>
             </div>
 
@@ -412,7 +423,7 @@
   <!-- Sección productos nuevos del mes -->
     <div class="container my-5">
         <div class="row">
-            <div class="col-auto py-2 mt-5 fs-2 bg-danger text-white">
+            <div class="col-auto py-2 mt-5 fs-2 background-rojo text-white">
                 <p><span class="fw-bold">INGRESOS</span> DEL MES</p>
             </div>
         </div>
@@ -425,13 +436,13 @@
                     <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" alt="Producto 1">
                     <h6 class="mt-2 fw-bold text-danger fs-5">MODER-4007/00</h6>
                     <p class="fs-5">Sartén antiadherente 28cm</p>
-                    <div class="product-price">S/.3,899</div>
+                    <div class="product-price">S/.217.00</div>
                     <div class="qty-controls">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, -1)">-</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, -1)">-</button>
                         <input type="number" class="form-control mx-1" value="1" min="1">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, 1)">+</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, 1)">+</button>
                     </div>
-                    <button class="btn btn-outline-danger w-100">Agregar al Carrito</button>
+                    <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
                 </div>
             </div>
 
@@ -442,13 +453,13 @@
                     <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/4480.jpg" alt="Producto 2">
                     <h6 class="mt-2 fw-bold text-danger fs-5">LAB-117-26003</h6>
                     <p class="fs-5">Cacerola de Acero N°28</p>
-                    <div class="product-price">S/.5,600</div>
+                    <div class="product-price">S/.120.00</div>
                     <div class="qty-controls">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, -1)">-</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, -1)">-</button>
                         <input type="number" class="form-control mx-1" value="1" min="1">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, 1)">+</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, 1)">+</button>
                     </div>
-                    <button class="btn btn-outline-danger w-100">Agregar al Carrito</button>
+                    <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
                 </div>
             </div>
 
@@ -459,13 +470,13 @@
                     <img src="https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395630.jpg" alt="Producto 3">
                     <h6 class="mt-2 fw-bold text-danger fs-5">CL-6280</h6>
                     <p class="fs-5">Panquequera-Mango de Madera 22cm</p>
-                    <div class="product-price">S/.1,550</div>
+                    <div class="product-price">S/.150.00</div>
                     <div class="qty-controls">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, -1)">-</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, -1)">-</button>
                         <input type="number" class="form-control mx-1" value="1" min="1">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, 1)">+</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, 1)">+</button>
                     </div>
-                    <button class="btn btn-outline-danger w-100">Agregar al Carrito</button>
+                    <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
                 </div>
             </div>
 
@@ -476,13 +487,13 @@
                     <img src="https://m.media-amazon.com/images/I/81dnHMrSnXL.jpg" alt="Producto 4">
                     <h6 class="mt-2 fw-bold text-danger fs-5">CL-7582</h6>
                     <p class="fs-5">Sartén de Marmol 26cm</p>
-                    <div class="product-price">S/.1,550</div>
+                    <div class="product-price">S/.230.00</div>
                     <div class="qty-controls">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, -1)">-</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, -1)">-</button>
                         <input type="number" class="form-control mx-1" value="1" min="1">
-                        <button class="btn btn-outline-danger btn-sm" onclick="updateQty(this, 1)">+</button>
+                        <button class="btn btn-outline-danger btn-sm backgroundHover-rojo" onclick="updateQty(this, 1)">+</button>
                     </div>
-                    <button class="btn btn-outline-danger w-100">Agregar al Carrito</button>
+                    <button class="btn btn-outline-danger w-100 backgroundHover-rojo">Agregar al Carrito</button>
                 </div>
             </div>
 
@@ -491,7 +502,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="bg-danger text-white py-3 footer-red-section">
+        <div class="background-rojo text-white py-3 footer-red-section">
             <div class="container">
 
                 <div class="row justify-content-around align-items-center text-center">
