se agrego el carrito de compras

--- a/tests/test.html
+++ b/tests/test.html
@@ -1,79 +1,249 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tests</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <title>Carrito de Compras</title>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    /* Modal */
+    .modal-content {
+      border-radius: 8px;
+      box-shadow: 0 6px 25px rgba(0,0,0,0.3);
+    }
+    .modal-header {
+      background-color: rgb(228, 30, 30) !important;
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+    }
+    .modal-header h5 {
+      font-size: 1.4rem;
+      font-weight: bold;
+    }
+    .btn-close-white {
+      filter: brightness(0) invert(1);
+    }
+
+    /* Contenedor de productos */
+    .cart-body {
+      max-height: 400px; 
+      overflow-y: auto;
+      padding: 15px;
+    }
+    .cart-item {
+      background: #fafafa;
+      border-radius: 6px;
+      padding: 12px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 12px;
+    }
+    .product-img {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      border-radius: 4px;
+    }
+    .product-name {
+      font-size: 1.1rem;
+      font-weight: 500;
+      max-width: 17vw;
+    }
+    .text-truncate {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    /* Acciones producto */
+    .input-group input {
+      border: 1px solid rgb(228, 30, 30);
+    }
+    .input-group .btn {
+      border: 1px solid rgb(228, 30, 30);
+      color: rgb(228, 30, 30);
+    }
+    .input-group .btn:hover {
+      background-color: rgb(228, 30, 30);
+      color: #fff;
+    }
+    .btn-remove {
+      border: 1px solid rgb(228, 30, 30);
+      border-radius: 50%;
+      width: 57px;
+      height: 32px;
+      padding: 0;
+      font-weight: bold;
+      color: rgb(228, 30, 30);
+    }
+    .btn-remove:hover {
+      background-color: rgb(228, 30, 30);
+      color: white;
+    }
+
+    /* Footer */
+    .cart-footer {
+      background: white;
+      border-top: 1px solid #eee;
+      padding-top: 15px;
+    }
+    .cart-footer strong {
+      font-size: 1.1rem;
+    }
+    .cart-footer .btn {
+      border-radius: 0;
+      font-weight: 500;
+      padding: 10px;
+    }
+    .btn-outline-danger {
+      border: 1px solid rgb(228, 30, 30);
+      color: rgb(228, 30, 30);
+    }
+    .btn-outline-danger:hover {
+      background-color: rgb(228, 30, 30);
+      color: #fff;
+    }
+
+    .cantidadProducto{
+      max-width:3rem !important;
+    }
+
+    /* RESPONSIVE */
+    @media (max-width: 576px) {
+      .cart-item {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .product-actions {
+        margin-top: 10px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+      }
+      .input-group {
+        width: 100px;
+        margin-bottom: 8px;
+      }
+      .product-name {
+        max-width: 60vw;
+      }
+      .cart-footer .btn {
+        width: 100%;
+        margin-bottom: 8px;
+      }
+      .btn-remove{
+        width: 30px;
+      }
+    }
+  </style>
 </head>
 <body class="bg-light">
-  <!-- Sección Políticas de Cambio y Devolución -->
-<section class="politicas py-5">
-  <!-- Banner superior -->
-  <div class="bg-danger text-white text-center py-4 shadow-banner">
-    <h2 class="fw-bold m-0">POLÍTICAS DE CAMBIO Y DEVOLUCIÓN</h2>
+
+  <!-- Botón para abrir carrito -->
+  <div class="container text-center my-5">
+    <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#cartModal">Ver Carrito</button>
   </div>
 
-  <!-- Contenido -->
-  <div class="container my-5">
-    <div class="row justify-content-center">
-      <div class="col-lg-10 col-md-12">
-        <p class="text-secondary">
-          En Distribuidora San Martín queremos que estés satisfecho con tu compra, por eso podés solicitar a nuestro equipo de Atención al Cliente el cambio o devolución de un producto adquirido en nuestro sitio.
-          <br>A continuación, describimos nuestra política de cambios y devoluciones, con plazos y condiciones.
-          <br>Los motivos por los cuales puedes gestionar el cambio o la devolución de un producto son los siguientes:
-        </p>
-        <ul>
-          <li class="text-secondary">Producto defectuoso</li>
-          <li class="text-secondary">Producto llegó roto o con desperfecto.</li>
-          <li class="text-secondary">Producto con variantes (color, tamaño, entre otros) diferentes al pedido.</li>
-          <li class="text-secondary">Producto distinto al pedido.</li>
-        </ul>
-        <p class="text-secondary"><br>No se aceptan cambios y devoluciones de los productos que se encuentren:
-        <ul>
-          <li class="text-secondary">Usados.</li>
-          <li class="text-secondary">Sin alguno de sus accesorios, piezas, manuales, entre otros.</li>
-          <li class="text-secondary">Sin su envoltorio original (cajas, plásticos, entre otros).</li>
-          <li class="text-secondary">En condición diferente a las necesarias para productos de esa categoría.</li>
-        </ul>
-        </p>
-        <p class="text-secondary">
-          En caso de ser devolución o cambio, se enviará el nuevo producto o se restituirá el monto abonado en la cuenta bancaria utilizada para la compra.
-          <br>Lapso de tiempo para realizar dichos cambios, 5 días hábiles de una vez recibida la compra.
-          <br>
-          <small class="text-muted">*(Sugerimos que los productos que sean con pila o eléctricos sean probados una vez recibidos)</small>
-        </p>
+  <!-- Modal del carrito -->
+  <div class="modal fade" id="cartModal" tabindex="-1">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header text-white">
+          <h5 class="modal-title">MI PEDIDO</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body cart-body">
+          <div id="cartItems"></div>
+        </div>
+        <div class="modal-footer flex-column cart-footer w-100">
+          <div class="d-flex justify-content-between w-100 mb-2 px-3">
+            <strong>TOTAL:</strong>
+            <strong id="cartTotal">$0</strong>
+          </div>
+          <div class="d-flex flex-wrap justify-content-between w-100">
+            <button class="btn btn-outline-dark me-2 flex-fill" data-bs-dismiss="modal">SEGUIR PIDIENDO</button>
+            <button class="btn btn-outline-secondary me-2 flex-fill" onclick="finalizarPedido()">FINALIZAR PEDIDO</button>
+            <button class="btn btn-outline-danger flex-fill" onclick="vaciarCarrito()">VACIAR CARRITO</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</section>
 
-<!-- Estilos opcionales -->
-<style>
-.politicas {
-  min-height: 100vh; /* Que ocupe toda la pantalla */
-  display: flex;
-  flex-direction: column;
-}
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Array de productos del carrito
+    let carrito = [
+      { id: 1, nombre: "Juego ollas y sartenes de acero inoxidable super resistentes", precio: 99800, cantidad: 1, imagen: "https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" },
+      { id: 2, nombre: "Tender ropa de 18 mm", precio: 34000, cantidad: 1, imagen: "https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" },
+      { id: 3, nombre: "Vaso térmico Labu", precio: 1400, cantidad: 2, imagen: "https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" },
+      { id: 4, nombre: "Juego ollas y sartenes de acero inoxidable super resistentes", precio: 99800, cantidad: 1, imagen: "https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" },
+      { id: 5, nombre: "Tender ropa de 18 mm", precio: 34000, cantidad: 1, imagen: "https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" },
+      { id: 6, nombre: "Vaso térmico Labu", precio: 1400, cantidad: 2, imagen: "https://mayoristaprecioscuidados.com.ar/Admin/Imagenes/Items/395780.jpg" }
+    ];
 
-.politicas p, 
-.politicas ul {
-  font-size: 1.2rem;
-  color: #555;
-  line-height: 1.7;
-}
+    function renderCarrito() {
+      const cartItems = document.getElementById("cartItems");
+      const cartTotal = document.getElementById("cartTotal");
+      cartItems.innerHTML = "";
+      let total = 0;
 
-/* Sombra sutil debajo del banner */
-.shadow-banner {
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
-}
-</style>
+      carrito.forEach(producto => {
+        let subtotal = producto.precio * producto.cantidad;
+        total += subtotal;
 
+        let item = document.createElement("div");
+        item.classList.add("cart-item");
 
+        item.innerHTML = `
+          <div class="d-flex align-items-center">
+            <img src="${producto.imagen}" class="product-img me-2">
+            <span class="text-truncate product-name">${producto.nombre}</span>
+          </div>
+          <div class="d-flex align-items-center product-actions">
+            <div class="input-group input-group-sm me-1">
+              <button class="btn" onclick="cambiarCantidad(${producto.id}, -1)">-</button>
+              <input type="text" class="form-control text-center cantidadProducto" value="${producto.cantidad}" readonly>
+              <button class="btn" onclick="cambiarCantidad(${producto.id}, 1)">+</button>
+            </div>
+            <span class="text-danger fw-bold me-2">Total: $${subtotal.toLocaleString()}</span>
+            <button class="btn btn-remove ms-5" onclick="eliminarProducto(${producto.id})">✕</button>
+          </div>
+        `;
+        cartItems.appendChild(item);
+      });
 
+      cartTotal.textContent = "$" + total.toLocaleString();
+    }
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    function cambiarCantidad(id, delta) {
+      let producto = carrito.find(p => p.id === id);
+      if (!producto) return;
+      producto.cantidad += delta;
+      if (producto.cantidad < 1) producto.cantidad = 1;
+      renderCarrito();
+    }
+
+    function eliminarProducto(id) {
+      carrito = carrito.filter(p => p.id !== id);
+      renderCarrito();
+    }
+
+    function vaciarCarrito() {
+      carrito = [];
+      renderCarrito();
+    }
+
+    function finalizarPedido() {
+      window.location.href = "#";
+    }
+
+    // Render inicial
+    renderCarrito();
+  </script>
 </body>
 </html>
