--- a/finalizarPedido.html
+++ b/finalizarPedido.html
@@ -409,8 +409,13 @@
                     </select>
                     <label for="floatingSelect">Forma de Pago</label>
                 </div>
+            </div> 
+            <div class="col-12">
+                <div class="form-floating">
+                    <textarea class="form-control info-input" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 180px"></textarea>
+                    <label for="floatingTextarea2">Observaciones...</label>
+                </div>
             </div>
-
 
         </form>
     </div>
