--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <div class="col-md-5 mt-3" style="display: flex; flex-direction: row; align-self: center; justify-content: flex-end">
 
                     <div class="text-center" style=" width: 33%; height: 50px;margin-right:5px">
+                        <!--Este botón abre el modal del carrito de compras-->
                         <button class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#cartModal"  style="width:100%;height:50px" type="button">CARRITO <i class="bi bi-cart2" style="height: 16px; margin-left: 10px;"></i></button>
                     </div>
                     <div class="text-center" style=" width: 33%; height: 50px;margin-right:5px">
